--- a/testing/testing.html
+++ b/testing/testing.html
@@ -40,7 +40,11 @@
             <section class="">
                 <h3>Attention span test</h3>
 
-
+                <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12 7V12L13.5 14.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
+                        stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
                 <p>10-15 minutes</p>
             </section>
 
@@ -54,7 +58,9 @@
             </section>
 
             <button>Start test
-
+                <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="#1C274C"/>
+                    </svg>
             </button>
 
         </section>
@@ -67,7 +73,11 @@
             <section class="">
                 <h3>Word recognition</h3>
 
-
+                <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12 7V12L13.5 14.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
+                        stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
                 <p>5-10 minutes</p>
             </section>
 
@@ -83,10 +93,12 @@
             </section>
 
             <section class="">
-                <img src="" alt="">
+                <img src="/svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button>Start test
-
+                    <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="#1C274C"/>
+                        </svg>
                 </button>
             </section>
         </section>
@@ -102,7 +114,11 @@
             <section class="">
                 <h3>The first words</h3>
 
-
+                <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12 7V12L13.5 14.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
+                        stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
                 <p>10-15 minutes</p>
             </section>
 
@@ -119,10 +135,12 @@
             </section>
 
             <section class="">
-                <img src="" alt="">
+                <img src="/svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button>Start test
-
+                    <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="#1C274C"/>
+                        </svg>
                 </button>
             </section>
         </section>
@@ -136,7 +154,11 @@
             <section class="">
                 <h3>The first words</h3>
 
-
+                <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12 7V12L13.5 14.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
+                        stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
                 <p>10-15 minutes</p>
             </section>
 
@@ -154,10 +176,12 @@
             </section>
 
             <section class="">
-                <img src="" alt="">
+                <img src="/svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button>Start test
-
+                    <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="#1C274C"/>
+                        </svg>
                 </button>
             </section>
 
