home en testing

--- a/testing/testing.html
+++ b/testing/testing.html
@@ -7,6 +7,10 @@
     <title>Testing</title>
     <link rel="stylesheet" href="https://kitkatisvibing.github.io/look-and-feel-styleguide/tumimundo.css">
     <link rel="stylesheet" href="testing.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
@@ -22,7 +26,7 @@
 
     </header>
 
-    <section>
+    <article>
 
         <details>
             <summary>Privacy statement</summary>
@@ -30,12 +34,12 @@
                 preferences in the settings at any given time and moment.</p>
         </details>
 
-    </section>
+    </article>
 
 
     <main>
         <h2>6-12 months</h2>
-        <section class="">
+        <article class="">
 
             <section class="">
                 <h3>Attention span test</h3>
@@ -48,27 +52,29 @@
                 <p>10-15 minutes</p>
             </section>
 
-            <section class="">
+            <div class="">
                 <p>How it works:</p>
 
                 <p>The reason to do this test is to measure how long the attention span is for the learned language(s).
                     Before you start the test there will be a few short steps you will have to take before you can start
                     the
                     test. This will be explained to you through a few pictures. </p>
-            </section>
+                </div>
 
             <button>Start test
                 <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="#1C274C"/>
-                    </svg>
+                    <path
+                        d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z"
+                        fill="#1C274C" />
+                </svg>
             </button>
 
-        </section>
+        </article>
 
 
 
 
-        <section class="">
+        <article class="">
 
             <section class="">
                 <h3>Word recognition</h3>
@@ -81,7 +87,7 @@
                 <p>5-10 minutes</p>
             </section>
 
-            <section class="">
+            <div class="">
                 <p>How it works:</p>
 
                 <p>This test is provided through the University of Leiden. The results of these tests will be shared
@@ -90,25 +96,27 @@
                     receive results after the test. This is only for research purposes. How many of the words heard
                     during
                     the stories stay around?</p>
-            </section>
+            </div>
 
-            <section class="">
+            <div class="">
                 <img src="/svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button>Start test
                     <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="#1C274C"/>
-                        </svg>
+                        <path
+                            d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z"
+                            fill="#1C274C" />
+                    </svg>
                 </button>
-            </section>
-        </section>
+            </div>
+        </article>
 
 
 
 
 
         <h2>1-2 years</h2>
-        <section class="">
+        <article class="">
 
 
             <section class="">
@@ -122,7 +130,7 @@
                 <p>10-15 minutes</p>
             </section>
 
-            <section class="">
+            <div class="">
 
                 <p>How it works</p>
 
@@ -132,24 +140,26 @@
                     receive results after the test. This is only for research purposes. How many of the words heard
                     during
                     the stories stay around?</p>
-            </section>
+                </div>
 
-            <section class="">
+            <div class="">
                 <img src="/svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button>Start test
                     <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="#1C274C"/>
-                        </svg>
+                        <path
+                            d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z"
+                            fill="#1C274C" />
+                    </svg>
                 </button>
-            </section>
-        </section>
+            </div>
+        </article>
 
 
 
 
 
-        <section class="">
+        <article class="">
 
             <section class="">
                 <h3>The first words</h3>
@@ -162,7 +172,7 @@
                 <p>10-15 minutes</p>
             </section>
 
-            <section class="">
+            <div class="">
 
                 <p>How it works:</p>
 
@@ -173,26 +183,25 @@
                     during
                     the stories stay around?</p>
 
-            </section>
+                </div>
 
-            <section class="">
+            <div class="">
                 <img src="/svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button>Start test
                     <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z" fill="#1C274C"/>
-                        </svg>
+                        <path
+                            d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z"
+                            fill="#1C274C" />
+                    </svg>
                 </button>
-            </section>
-
-
-
-        </section>
+            </div>
+        </article>
 
     </main>
 
     <footer>
-        <button><svg fill="#000000" width="40px" height="40px" viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg">
+        <button><svg fill="#000000" width="45px" height="45px" viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg">
                 <path
                     d="M 6.0626 19.5390 L 49.9144 19.5390 C 50.8984 19.5390 51.7187 18.7656 51.7187 17.7812 C 51.7187 16.7968 50.8984 16 49.9144 16 L 6.0626 16 C 5.0782 16 4.2813 16.7968 4.2813 17.7812 C 4.2813 18.7656 5.0782 19.5390 6.0626 19.5390 Z M 6.0626 29.7578 L 49.9144 29.7578 C 50.8984 29.7578 51.7187 28.9843 51.7187 28 C 51.7187 26.9921 50.8984 26.1953 49.9144 26.1953 L 6.0626 26.1953 C 5.0782 26.1953 4.2813 26.9921 4.2813 28 C 4.2813 28.9843 5.0782 29.7578 6.0626 29.7578 Z M 6.0626 40 L 49.9144 40 C 50.8984 40 51.7187 39.2031 51.7187 38.1953 C 51.7187 37.2109 50.8984 36.4375 49.9144 36.4375 L 6.0626 36.4375 C 5.0782 36.4375 4.2813 37.2109 4.2813 38.1953 C 4.2813 39.2031 5.0782 40 6.0626 40 Z" />
             </svg></button>
