--- a/testing/testing.html
+++ b/testing/testing.html
@@ -39,9 +39,9 @@
 
     <main>
         <h2>6-12 months</h2>
-        <article class="">
+        <article class="test-1">
 
-            <section class="">
+            <section class="do-test-header">
                 <h3>Attention span test</h3>
 
                 <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -52,7 +52,7 @@
                 <p>10-15 minutes</p>
             </section>
 
-            <div class="">
+            <div class="tekst-uitleg">
                 <p>How it works:</p>
 
                 <p>The reason to do this test is to measure how long the attention span is for the learned language(s).
@@ -74,9 +74,9 @@
 
 
 
-        <article class="">
+        <article class="test-2">
 
-            <section class="">
+            <section class="do-test-header">
                 <h3>Word recognition</h3>
 
                 <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -87,7 +87,7 @@
                 <p>5-10 minutes</p>
             </section>
 
-            <div class="">
+            <div class="tekst-uitleg">
                 <p>How it works:</p>
 
                 <p>This test is provided through the University of Leiden. The results of these tests will be shared
@@ -98,7 +98,7 @@
                     the stories stay around?</p>
             </div>
 
-            <div class="">
+            <div class="button-img-article">
                 <img src="/svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button>Start test
@@ -116,10 +116,10 @@
 
 
         <h2>1-2 years</h2>
-        <article class="">
+        <article class="test-3">
 
 
-            <section class="">
+            <section class="do-test-header">
                 <h3>The first words</h3>
 
                 <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -130,7 +130,7 @@
                 <p>10-15 minutes</p>
             </section>
 
-            <div class="">
+            <div class="tekst-uitleg">
 
                 <p>How it works</p>
 
@@ -142,7 +142,7 @@
                     the stories stay around?</p>
                 </div>
 
-            <div class="">
+            <div class="button-img-article">
                 <img src="/svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button>Start test
@@ -159,9 +159,9 @@
 
 
 
-        <article class="">
+        <article class="test-5">
 
-            <section class="">
+            <section class="do-test-header">
                 <h3>The first words</h3>
 
                 <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -172,7 +172,7 @@
                 <p>10-15 minutes</p>
             </section>
 
-            <div class="">
+            <div class="tekst-uitleg">
 
                 <p>How it works:</p>
 
@@ -185,7 +185,7 @@
 
                 </div>
 
-            <div class="">
+            <div class="button-img-article">
                 <img src="/svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button>Start test
