--- a/specificity/specificity.html
+++ b/specificity/specificity.html
@@ -86,11 +86,11 @@
 
 <main>
 
-    <div class="buddy-praat">
+    <div class="info">
 
-        <section class=""> <!--tekstballonen button-->
+        <section class="wolkje"> <!--tekstballonen button-->
 
-            <h1 class="tekst-tekstballon">
+            <h1 class="h1-tekstballon">
                 <span class="greeting">Good morning,</span>
                 <span class="sub-text">Shall we start with a story?</span>
             </h1>
@@ -284,3 +284,4 @@
 <!--EINDE HOME-->
 
 </html>
+
