--- a/specificity/specificity.html
+++ b/specificity/specificity.html
@@ -7,6 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="https://kitkatisvibing.github.io/look-and-feel-styleguide/tumimundo.css">
     <link rel="stylesheet" href="specificity.css">
+    <script defer src="specificity.js"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
@@ -270,7 +271,7 @@
     </div>
 
     <button aria-label="menu openen" id="menuToggle" tabindex="2">
-        <svg fill="#000000" width="45px" height="45px" viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg">
+        <svg fill="#fffffff" width="45px" height="45px" viewBox="0 0 56 56" xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M 6.0626 19.5390 L 49.9144 19.5390 C 50.8984 19.5390 51.7187 18.7656 51.7187 17.7812 C 51.7187 16.7968 50.8984 16 49.9144 16 L 6.0626 16 C 5.0782 16 4.2813 16.7968 4.2813 17.7812 C 4.2813 18.7656 5.0782 19.5390 6.0626 19.5390 Z M 6.0626 29.7578 L 49.9144 29.7578 C 50.8984 29.7578 51.7187 28.9843 51.7187 28 C 51.7187 26.9921 50.8984 26.1953 49.9144 26.1953 L 6.0626 26.1953 C 5.0782 26.1953 4.2813 26.9921 4.2813 28 C 4.2813 28.9843 5.0782 29.7578 6.0626 29.7578 Z M 6.0626 40 L 49.9144 40 C 50.8984 40 51.7187 39.2031 51.7187 38.1953 C 51.7187 37.2109 50.8984 36.4375 49.9144 36.4375 L 6.0626 36.4375 C 5.0782 36.4375 4.2813 37.2109 4.2813 38.1953 C 4.2813 39.2031 5.0782 40 6.0626 40 Z" />
         </svg>
