--- a/oefenen/oefen.html
+++ b/oefenen/oefen.html
@@ -122,33 +122,32 @@
 
     <main>
 
-        <!--START VRAAGTEKEN-->
+    <!--START VRAAGTEKEN-->
 
-        <article>
-            <section>
-                <h2>
-                    explanation
-                </h2>
-                <p>vfedjskandxbchDJdhebfnewndmhfe</p>
-            </section>
-        </article>
+<article>
+    <section>
+        <h2>
+            explanation
+        </h2>
+        <p>vfedjskandxbchDJdhebfnewndmhfe</p>
+    </section>
+</article>
 
-        <main>
+<main>
 
-            <div class="vraagteken" id="vraagToggle">
-                <svg aria-label="vraagteken" height="30px" width="30px" version="1.1" id="Capa_1"
-                    xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                    viewBox="0 0 302.967 302.967" xml:space="preserve">
-                    <g>
-                        <g>
-                            <g>
-                                <path style="fill:#434b75;" d="M151.483,302.967C67.956,302.967,0,235.017,0,151.483S67.956,0,151.483,0
+    <div class="vraagteken" id="vraagToggle">
+        <svg aria-label="vraagteken" height="30px" width="30px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+	 viewBox="0 0 302.967 302.967" xml:space="preserve">
+<g>
+	<g>
+		<g>
+			<path style="fill:#434b75;" d="M151.483,302.967C67.956,302.967,0,235.017,0,151.483S67.956,0,151.483,0
 				s151.483,67.956,151.483,151.483S235.017,302.967,151.483,302.967z M151.483,24.416c-70.066,0-127.067,57.001-127.067,127.067
-				s57.001,127.067,127.067,127.067s127.067-57.001,127.067-127.067S221.555,24.416,151.483,24.416z" />
-                            </g>
-                            <g>
-                                <g>
-                                    <path style="fill:#434b75;" d="M116.586,118.12c1.795-4.607,4.297-8.588,7.511-11.961c3.225-3.389,7.114-6.016,11.667-7.898
+				s57.001,127.067,127.067,127.067s127.067-57.001,127.067-127.067S221.555,24.416,151.483,24.416z"/>
+		</g>
+		<g>
+			<g>
+				<path style="fill:#434b75;" d="M116.586,118.12c1.795-4.607,4.297-8.588,7.511-11.961c3.225-3.389,7.114-6.016,11.667-7.898
 					c4.547-1.904,9.633-2.845,15.262-2.845c7.261,0,13.32,0.995,18.183,2.997c4.857,1.996,8.768,4.482,11.738,7.441
 					c2.964,2.97,5.091,6.168,6.369,9.584c1.273,3.432,1.915,6.636,1.915,9.595c0,4.901-0.642,8.947-1.915,12.118
 					c-1.278,3.171-2.866,5.88-4.759,8.131c-1.898,2.252-3.987,4.172-6.293,5.755c-2.295,1.588-4.471,3.171-6.516,4.759
@@ -157,15 +156,15 @@
 					c2.04-1.539,3.927-3.073,5.673-4.591c1.73-1.545,3.144-3.225,4.221-5.069c1.071-1.833,1.556-4.15,1.452-6.908
 					c0-4.705-1.148-8.18-3.454-10.427c-2.295-2.257-5.493-3.378-9.589-3.378c-2.758,0-5.134,0.533-7.131,1.605
 					s-3.628,2.513-4.911,4.302c-1.278,1.795-2.225,3.894-2.834,6.288c-0.615,2.415-0.919,4.982-0.919,7.756h-22.55
-					C113.85,127.785,114.791,122.732,116.586,118.12z M162.536,183.938v23.616h-24.09v-23.616H162.536z" />
-                                </g>
-                            </g>
-                        </g>
-                    </g>
-                </svg>
-            </div>
+					C113.85,127.785,114.791,122.732,116.586,118.12z M162.536,183.938v23.616h-24.09v-23.616H162.536z"/>
+			</g>
+		</g>
+	</g>
+</g>
+</svg>
+    </div>
 
-            <!--EINDE VRAAGTEKEN-->
+    <!--EINDE VRAAGTEKEN-->
 
 
             <!-- START HOME -->
