--- a/specificity/specificity.html
+++ b/specificity/specificity.html
@@ -97,7 +97,7 @@
 <main>
 
     <div class="vraagteken" id="vraagToggle">
-        <svg aria-label="vraagteken" height="30px" width="30px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+        <svg class="hulp-icon" aria-label="vraagteken" height="30px" width="30px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
 	 viewBox="0 0 302.967 302.967" xml:space="preserve">
 <g>
 	<g>
