dat de vraagteken pagina goed open gaat en de hover goed staat

--- a/specificity/specificity.html
+++ b/specificity/specificity.html
@@ -118,23 +118,24 @@
 
     <!--START VRAAGTEKEN-->
 
-    <article>
-        <section>
-            <h2>
-                Explanation
-            </h2>
-            <p>Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard
-                proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam
-                en ze door elkaar husselde om een font-catalogus te maken. Het heeft niet alleen vijf eeuwen overleefd
-                maar is ook, vrijwel onveranderd, overgenomen in elektronische letterzetting. Het is in de jaren '60
-                populair geworden met de introductie van Letraset vellen met Lorem Ipsum passages en meer recentelijk
-                door desktop publishing software zoals Aldus PageMaker die versies van Lorem Ipsum bevatten.</p>
-        </section>
-    </article>
+
 
     <main>
+        <article>
+            <section>
+                <h2>
+                    Explanation
+                </h2>
+                <p>Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard
+                    proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam
+                    en ze door elkaar husselde om een font-catalogus te maken. Het heeft niet alleen vijf eeuwen overleefd
+                    maar is ook, vrijwel onveranderd, overgenomen in elektronische letterzetting. Het is in de jaren '60
+                    populair geworden met de introductie van Letraset vellen met Lorem Ipsum passages en meer recentelijk
+                    door desktop publishing software zoals Aldus PageMaker die versies van Lorem Ipsum bevatten.</p>
+            </section>
+        </article>
 
-        <div class="vraagteken" id="vraagToggle">
+        <button type="button" class="vraagteken" id="vraagToggle">
             <svg class="hulp-icon" aria-label="vraagteken" height="30px" width="30px" version="1.1" id="Capa_1"
                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                 viewBox="0 0 302.967 302.967" xml:space="preserve">
@@ -162,7 +163,7 @@
                     </g>
                 </g>
             </svg>
-        </div>
+        </button>
 
         <!--EINDE VRAAGTEKEN-->
 
