--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
             <ul>
 
                 <li class="home">
-                    <a href="specificity.html" class="huis" aria-label="home"><svg class="svg-home" fill="#434b75"
+                    <a href="index.html" class="huis" aria-label="home"><svg class="svg-home" fill="#434b75"
                             width="40px" height="40px" viewBox="0 -32 576 576" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z" />
                         </svg></a>
-                    <a href="specificity.html">
+                    <a href="index.html">
                         <p class="kopje">Home</p>
                     </a>
                 </li>
 
                 <li class="testing">
-                    <a href="/testing/testing.html" class="testen" aria-label="testing"><svg class="svg-testing"
+                    <a href="./testing/testing.html" class="testen" aria-label="testing"><svg class="svg-testing"
                             height="40px" width="40px" version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve">
                             <style type="text/css">
@@ -58,7 +58,7 @@
                        c9.487-7.814,20.744,13.648,47.26,13.648C486.561,312.8,512,287.36,512,256C512,224.639,486.561,199.201,455.209,199.201z" />
                             </g>
                         </svg></a>
-                    <a href="/testing/testing.html">
+                    <a href="./testing/testing.html">
                         <p class="kopje">Testing</p>
                     </a>
                 </li>
