testing pagina tekst goed zetten

--- a/testing/testing.html
+++ b/testing/testing.html
@@ -120,14 +120,14 @@
 
       <!--START TESTING-->
 
-    <article class="uitleg">
+    <article>
         <h1>Testing</h1>
 
         <h2>Tests</h2>
 
-        <p>While using the TuMi Mundo method, you can do a couple of different tests to measure your child’s progress.
+        <p class="tekst-uitleg">While using the TuMi Mundo method, you can do a couple of different tests to measure your child’s progress.
             You
-            will be able to review all your results on the <a href="">statistics</a> page.</p>
+            will be able to review all your results on the <a class="tekst-link" href="">statistics</a> page.</p>
 
     </article>
 
@@ -158,7 +158,7 @@
             </section>
 
             <div class="tekst-uitleg">
-                <p>How it works:</p>
+                <p class="how">How it works:</p>
 
                 <p>The reason to do this test is to measure how long the attention span is for the learned language(s).
                     Before you start the test there will be a few short steps you will have to take before you can start
@@ -193,7 +193,7 @@
             </section>
 
             <div class="tekst-uitleg">
-                <p>How it works:</p>
+                <p class="how">How it works:</p>
 
                 <p>This test is provided through the University of Leiden. The results of these tests will be shared
                     with
@@ -237,7 +237,7 @@
 
             <div class="tekst-uitleg">
 
-                <p>How it works</p>
+                <p class="how">How it works</p>
 
                 <p>This test is provided through the University of Leiden. The results of these tests will be shared
                     with
@@ -279,7 +279,7 @@
 
             <div class="tekst-uitleg">
 
-                <p>How it works:</p>
+                <p class="how">How it works:</p>
 
                 <p>This test is provided through the University of Leiden. The results of these tests will be shared
                     with
