--- a/testing/testing.html
+++ b/testing/testing.html
@@ -102,7 +102,7 @@
             </div>
 
             <div class="button-img-article">
-                <img src="/svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
+                <img src="../svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button>Start test
                     <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -146,7 +146,7 @@
                 </div>
 
             <div class="button-img-article">
-                <img src="/svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
+                <img src="../svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button>Start test
                     <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -189,7 +189,7 @@
                 </div>
 
             <div class="button-img-article">
-                <img src="/svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
+                <img src="../svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button>Start test
                     <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
