--- a/testing/testing.html
+++ b/testing/testing.html
@@ -64,8 +64,8 @@
                     test. This will be explained to you through a few pictures. </p>
                 </div>
 
-            <button>Start test
-                <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <button class="button-start-test">Start test
+                <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z"
                         fill="#1C274C" />
@@ -104,8 +104,8 @@
             <div class="button-img-article">
                 <img src="../svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
-                <button>Start test
-                    <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <button class="button-start-test">Start test
+                    <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z"
                             fill="#1C274C" />
@@ -148,8 +148,8 @@
             <div class="button-img-article">
                 <img src="../svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
-                <button>Start test
-                    <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <button class="button-start-test">Start test
+                    <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z"
                             fill="#1C274C" />
@@ -191,8 +191,8 @@
             <div class="button-img-article">
                 <img src="../svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
-                <button>Start test
-                    <svg width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <button class="button-start-test">Start test
+                    <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z"
                             fill="#1C274C" />
@@ -202,7 +202,7 @@
         </article>
 
 
-        <button aria-label="menu openen" id="menuToggle" tabindex="2">
+        <button class="button-menu" aria-label="menu openen" id="menuToggle" tabindex="2">
             <svg id="menuIcon" fill="#fffffff" width="45px" height="45px" viewBox="0 0 56 56"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
