--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="https://kitkatisvibing.github.io/look-and-feel-styleguide/tumimundo.css">
     <link rel="stylesheet" href="specificity/specificity.css">
+    <link rel="stylesheet" href="menu.css">
     <script defer src="specificity/specificity.js"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
