details en summary

--- a/testing/testing.html
+++ b/testing/testing.html
@@ -135,7 +135,7 @@
 
         <details>
             <summary>Privacy statement</summary>
-            <p>The results of these tests <b>will</b> be shared with the researchers and universities. You can change your
+            <p class="privacy">The results of these tests <b>will</b> be shared with the researchers and universities. You can change your
                 preferences in the settings at any given time and moment.</p>
         </details>
 
