summary en details

--- a/testing/testing.html
+++ b/testing/testing.html
@@ -35,8 +35,8 @@
                 </li>
 
                 <li class="testing">
-                    <a href="./testing.html" class="testen" aria-label="testing"><svg class="svg-testing"
-                            height="40px" width="40px" version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg"
+                    <a href="./testing.html" class="testen" aria-label="testing"><svg class="svg-testing" height="40px"
+                            width="40px" version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve">
                             <style type="text/css">
                                 .st0 {
@@ -115,28 +115,31 @@
         </nav>
     </header>
 
-     <!--EINDE MENU-->
+    <!--EINDE MENU-->
 
 
-      <!--START TESTING-->
+    <!--START TESTING-->
 
     <article>
         <h1>Testing</h1>
 
         <h2>Tests</h2>
 
-        <p class="tekst-uitleg">While using the TuMi Mundo method, you can do a couple of different tests to measure your child’s progress.
+        <p class="tekst-uitleg">While using the TuMi Mundo method, you can do a couple of different tests to measure
+            your child’s progress.
             You
             will be able to review all your results on the <a class="tekst-link" href="">statistics</a> page.</p>
 
     </article>
 
-    <article>
+    <article class="Privacy-statement">
 
         <details>
             <summary>Privacy statement</summary>
-            <p class="privacy">The results of these tests <b>will</b> be shared with the researchers and universities. You can change your
+            <p class="privacy">The results of these tests <b>will</b> be shared with the researchers and universities.
+                You can change your
                 preferences in the settings at any given time and moment.</p>
+            <button class="change-preferences">Change preferences</button>
         </details>
 
     </article>
@@ -149,7 +152,8 @@
             <section class="do-test-header-1">
                 <h3>Attention span test</h3>
 
-                <svg class="klok" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="klok" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M12 7V12L13.5 14.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
                         stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -164,10 +168,11 @@
                     Before you start the test there will be a few short steps you will have to take before you can start
                     the
                     test. This will be explained to you through a few pictures. </p>
-                </div>
+            </div>
 
             <button class="button-start-test">Start test
-                <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z"
                         fill="#ffffff" />
@@ -184,7 +189,8 @@
             <section class="do-test-header-2">
                 <h3>Word recognition</h3>
 
-                <svg class="klok" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="klok" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M12 7V12L13.5 14.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
                         stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -207,7 +213,8 @@
                 <img src="../svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button class="button-start-test">Start test
-                    <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z"
                             fill="#ffffff" />
@@ -227,7 +234,8 @@
             <section class="do-test-header-3">
                 <h3>The first words</h3>
 
-                <svg class="klok" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="klok" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M12 7V12L13.5 14.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
                         stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -245,13 +253,14 @@
                     receive results after the test. This is only for research purposes. How many of the words heard
                     during
                     the stories stay around?</p>
-                </div>
+            </div>
 
             <div class="button-img-article">
                 <img src="../svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button class="button-start-test">Start test
-                    <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z"
                             fill="#ffffff" />
@@ -269,7 +278,8 @@
             <section class="do-test-header-4">
                 <h3>The first words</h3>
 
-                <svg class="klok" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="klok" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M12 7V12L13.5 14.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
                         stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -288,13 +298,14 @@
                     during
                     the stories stay around?</p>
 
-                </div>
+            </div>
 
             <div class="button-img-article">
                 <img src="../svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
                 <button class="button-start-test">Start test
-                    <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M21.4086 9.35258C23.5305 10.5065 23.5305 13.4935 21.4086 14.6474L8.59662 21.6145C6.53435 22.736 4 21.2763 4 18.9671L4 5.0329C4 2.72368 6.53435 1.26402 8.59661 2.38548L21.4086 9.35258Z"
                             fill="#ffffff" />
@@ -315,7 +326,7 @@
     </main>
 
 
- <!--EINDE TESTING-->
+    <!--EINDE TESTING-->
 
 
 
